REGRESSION (r199558): WKWebView upload file which name contains Chinese character results in garbled code https://bugs.webkit.org/show_bug.cgi?id=172849 <rdar://problem/32567454>

Reviewed by Darin Adler.

Source/WebKit2:

This is the Mac equivalent of what was fixed in r208295. This time we use -[NSURL path] to
construct a WTF::String instead of calling String::fromUTF8() on -[NSURL fileSystemRepresentation].

* UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::runOpenPanel):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/RunOpenPanel.mm: Added.
(-[RunOpenPanelUIDelegate webView:runOpenPanelWithParameters:initiatedByFrame:completionHandler:]):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/189890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217865 268f45cc-cd09-0410-ab3c-d52691b4dbfc